--- a/admin-add-product.html
+++ b/admin-add-product.html
@@ -21,7 +21,7 @@
       <a class="navbar-brand" href="admin-dashboard.html">ShopX Admin</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="admin-dashboard.html">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="admin-products.html">Products</a></li>
           <li class="nav-item"><a class="nav-link active" href="admin-add-product.html">Add Product</a></li>
           <li class="nav-item"><a class="nav-link" href="admin-orders.html">Orders</a></li>
@@ -54,3 +54,4 @@
   </footer>
 </body>
 </html>
+
